# qt6_qml_cmake_prj

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
app/: CMakeLists.txt
app/qml/: FramelessWindow.qml  Main.qml
app/qml/Login/: LoginAccountPage.qml  LoginDialog.qml  LoginOAuthPage.qml  LoginPhonePage.qml
app/qml/Main/: FramelessWindow.qml  Main.qml
app/rc/: app.rc.in
app/src/: main.cc
commtoolkits/: CMakeLists.txt  Property.h  main.cc
cppfeature/: CMakeLists.txt  Property.h  Variant.h  main.cc
scripts/: clean.bat  disk_clean.bat  reset_icon_cache.bat
